[tool.poetry]
name = "synapse-purge"
version = "2.2.0"
description = "A script to purge content from Synapse servers"
authors = ["Chris Braun <cryzed@googlemail.com>", "imtbl <imtbl@mser.at>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.3"
postgres = "^3.0.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
